Preprocessing step update

--- a/sf-crime.ipynb
+++ b/sf-crime.ipynb
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 6:==============>                                            (1 + 3) / 4]\r"
+      "[Stage 5:>                                                          (0 + 4) / 4]\r"
      ]
     },
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,67 +535,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'Column' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/liviadelgaudio/Desktop/BigData/prova_spark.ipynb Cella 17\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/prova_spark.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Street number extraction\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/prova_spark.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mwithColumn(\u001b[39m'\u001b[39m\u001b[39mStreetNo\u001b[39m\u001b[39m'\u001b[39m, when(\u001b[39mtype\u001b[39m(df[\u001b[39m'\u001b[39;49m\u001b[39mAddress\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49msplit(\u001b[39m'\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m'\u001b[39;49m)[\u001b[39m0\u001b[39m])\u001b[39m==\u001b[39mInteger, lit(\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39motherwise(lit(\u001b[39m0\u001b[39m))))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/prova_spark.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m df\u001b[39m.\u001b[39mshow()\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'Column' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "#Street number extraction\n",
-    "df = df.withColumn('StreetNo', when(type(df['Address'].split(' ')[0])==Integer, lit(1).otherwise(lit(0))))\n",
-    "df.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 211:==========================================>              (3 + 1) / 4]\r"
+      "[Stage 20:>                                                         (0 + 4) / 4]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------+---------------+--------------------+---------+----------+--------------+--------------------+-------------------+------------------+----+-----+---+----+-----+\n",
-      "|              Dates|       Category|            Descript|DayOfWeek|PdDistrict|    Resolution|             Address|                  X|                 Y|Year|Month|Day|Hour|Block|\n",
-      "+-------------------+---------------+--------------------+---------+----------+--------------+--------------------+-------------------+------------------+----+-----+---+----+-----+\n",
-      "|2015-05-13 19:30:00|  LARCENY/THEFT|GRAND THEFT FROM ...|Wednesday|  SOUTHERN|          NONE|500 Block of BRAN...|  -122.397615567933|  37.7773918242817|2015|    5| 13|  19|    1|\n",
-      "|2015-05-12 19:00:00|       BURGLARY|BURGLARY, HOT PRO...|  Tuesday|   TARAVAL|          NONE|2100 Block of 43R...|   -122.50180154774| 37.74655644758779|2015|    5| 12|  19|    1|\n",
-      "|2015-05-11 19:45:00|        ASSAULT|             BATTERY|   Monday|   MISSION|          NONE|4000 Block of 18T...|-122.43444692866699|  37.7608670671665|2015|    5| 11|  19|    1|\n",
-      "|2015-05-11 17:44:00|    WEAPON LAWS|CARRYING A CONCEA...|   Monday|   MISSION|ARREST, BOOKED| NATOMA ST / 15TH ST|  -122.405467934272|   37.781924110513|2015|    5| 11|  17|    0|\n",
-      "|2015-05-11 15:50:00|   NON-CRIMINAL|     COURTESY REPORT|   Monday|  SOUTHERN|          NONE|800 Block of BRYA...|-122.40340479147899|   37.775420706711|2015|    5| 11|  15|    1|\n",
-      "|2015-05-03 21:00:00|  LARCENY/THEFT|GRAND THEFT FROM ...|   Sunday|   TARAVAL|          NONE|800 Block of PACH...|  -122.469546792005|37.753565035114704|2015|    5|  3|  21|    1|\n",
-      "|2015-05-02 16:05:00| OTHER OFFENSES|VIOLATION OF MUNI...| Saturday|  SOUTHERN|ARREST, BOOKED|2ND ST / TOWNSEND ST|  -122.390531404145|37.780607079847705|2015|    5|  2|  16|    0|\n",
-      "|2015-05-02 11:40:00|  LARCENY/THEFT|ATTEMPTED THEFT F...| Saturday|  NORTHERN|          NONE|100 Block of CEDA...|  -122.420607225531|  37.7862064515088|2015|    5|  2|  11|    1|\n",
-      "|2015-04-30 22:00:00|  VEHICLE THEFT|        STOLEN TRUCK| Thursday|   BAYVIEW|          NONE|1300 Block of UND...|-122.38723403675199|  37.7271017664689|2015|    4| 30|  22|    1|\n",
-      "|2015-04-29 17:00:00| MISSING PERSON|        FOUND PERSON|Wednesday| INGLESIDE|          NONE|0 Block of CUVIER ST|  -122.428718296467|  37.7340304069152|2015|    4| 29|  17|    1|\n",
-      "|2015-04-29 11:06:00|        ASSAULT|             BATTERY|Wednesday|  SOUTHERN|          NONE|400 Block of NATO...|  -122.407039055082|37.780756518359105|2015|    4| 29|  11|    1|\n",
-      "|2015-04-29 09:05:00| OTHER OFFENSES|DRIVERS LICENSE, ...|Wednesday|   TARAVAL| ARREST, CITED|OCEAN AV / SANLEA...|-122.47011059238001|  37.7303066365695|2015|    4| 29|   9|    0|\n",
-      "|2015-04-28 03:57:00|  LARCENY/THEFT|PETTY THEFT SHOPL...|  Tuesday|   MISSION|ARREST, BOOKED|3900 Block of 18T...|  -122.431710082584| 37.76114188133271|2015|    4| 28|   3|    1|\n",
-      "|2015-04-27 01:00:00|      VANDALISM|MALICIOUS MISCHIE...|   Monday| INGLESIDE|          NONE|1000 Block of POR...|  -122.457829853431|   37.740722334873|2015|    4| 27|   1|    1|\n",
-      "|2015-04-19 20:00:00|   NON-CRIMINAL|      FOUND PROPERTY|   Sunday|   CENTRAL|          NONE|POWELL ST / NORTH...|-122.41214331058599|  37.8067579023106|2015|    4| 19|  20|    0|\n",
-      "|2015-04-19 17:49:00|STOLEN PROPERTY|STOLEN PROPERTY, ...|   Sunday|   TARAVAL|ARREST, BOOKED|300 Block of FAXO...|  -122.460152208945|37.720945420187896|2015|    4| 19|  17|    1|\n",
-      "|2015-04-19 17:00:00|  LARCENY/THEFT|GRAND THEFT FROM ...|   Sunday|   CENTRAL|          NONE|2500 Block of POW...|  -122.412360253337|  37.8081755740357|2015|    4| 19|  17|    1|\n",
-      "|2015-04-19 16:28:00|       WARRANTS|      WARRANT ARREST|   Sunday|TENDERLOIN|ARREST, BOOKED|LEAVENWORTH ST / ...|  -122.414056291891|  37.7827931071006|2015|    4| 19|  16|    0|\n",
-      "|2015-04-19 16:25:00| OTHER OFFENSES|          CONSPIRACY|   Sunday| INGLESIDE|ARREST, BOOKED|700 Block of SAN ...|    -122.4232625139|  37.7427224817043|2015|    4| 19|  16|    1|\n",
-      "|2015-04-19 11:05:00|       BURGLARY|BURGLARY OF APART...|   Sunday|  NORTHERN|          NONE|800 Block of OFAR...|  -122.418729600557|   37.785007503993|2015|    4| 19|  11|    1|\n",
-      "+-------------------+---------------+--------------------+---------+----------+--------------+--------------------+-------------------+------------------+----+-----+---+----+-----+\n",
+      "+-------------------+---------------+--------------------+---------+----------+--------------+--------------------+-------------------+------------------+----+-----+---+----+--------+\n",
+      "|              Dates|       Category|            Descript|DayOfWeek|PdDistrict|    Resolution|             Address|                  X|                 Y|Year|Month|Day|Hour|StreetNo|\n",
+      "+-------------------+---------------+--------------------+---------+----------+--------------+--------------------+-------------------+------------------+----+-----+---+----+--------+\n",
+      "|2015-05-13 19:30:00|  LARCENY/THEFT|GRAND THEFT FROM ...|Wednesday|  SOUTHERN|          NONE|500 Block of BRAN...|  -122.397615567933|  37.7773918242817|2015|    5| 13|  19|     500|\n",
+      "|2015-05-12 19:00:00|       BURGLARY|BURGLARY, HOT PRO...|  Tuesday|   TARAVAL|          NONE|2100 Block of 43R...|   -122.50180154774| 37.74655644758779|2015|    5| 12|  19|    2100|\n",
+      "|2015-05-11 19:45:00|        ASSAULT|             BATTERY|   Monday|   MISSION|          NONE|4000 Block of 18T...|-122.43444692866699|  37.7608670671665|2015|    5| 11|  19|    4000|\n",
+      "|2015-05-11 17:44:00|    WEAPON LAWS|CARRYING A CONCEA...|   Monday|   MISSION|ARREST, BOOKED| NATOMA ST / 15TH ST|  -122.405467934272|   37.781924110513|2015|    5| 11|  17|       0|\n",
+      "|2015-05-11 15:50:00|   NON-CRIMINAL|     COURTESY REPORT|   Monday|  SOUTHERN|          NONE|800 Block of BRYA...|-122.40340479147899|   37.775420706711|2015|    5| 11|  15|     800|\n",
+      "|2015-05-03 21:00:00|  LARCENY/THEFT|GRAND THEFT FROM ...|   Sunday|   TARAVAL|          NONE|800 Block of PACH...|  -122.469546792005|37.753565035114704|2015|    5|  3|  21|     800|\n",
+      "|2015-05-02 16:05:00| OTHER OFFENSES|VIOLATION OF MUNI...| Saturday|  SOUTHERN|ARREST, BOOKED|2ND ST / TOWNSEND ST|  -122.390531404145|37.780607079847705|2015|    5|  2|  16|       0|\n",
+      "|2015-05-02 11:40:00|  LARCENY/THEFT|ATTEMPTED THEFT F...| Saturday|  NORTHERN|          NONE|100 Block of CEDA...|  -122.420607225531|  37.7862064515088|2015|    5|  2|  11|     100|\n",
+      "|2015-04-30 22:00:00|  VEHICLE THEFT|        STOLEN TRUCK| Thursday|   BAYVIEW|          NONE|1300 Block of UND...|-122.38723403675199|  37.7271017664689|2015|    4| 30|  22|    1300|\n",
+      "|2015-04-29 17:00:00| MISSING PERSON|        FOUND PERSON|Wednesday| INGLESIDE|          NONE|0 Block of CUVIER ST|  -122.428718296467|  37.7340304069152|2015|    4| 29|  17|       0|\n",
+      "|2015-04-29 11:06:00|        ASSAULT|             BATTERY|Wednesday|  SOUTHERN|          NONE|400 Block of NATO...|  -122.407039055082|37.780756518359105|2015|    4| 29|  11|     400|\n",
+      "|2015-04-29 09:05:00| OTHER OFFENSES|DRIVERS LICENSE, ...|Wednesday|   TARAVAL| ARREST, CITED|OCEAN AV / SANLEA...|-122.47011059238001|  37.7303066365695|2015|    4| 29|   9|       0|\n",
+      "|2015-04-28 03:57:00|  LARCENY/THEFT|PETTY THEFT SHOPL...|  Tuesday|   MISSION|ARREST, BOOKED|3900 Block of 18T...|  -122.431710082584| 37.76114188133271|2015|    4| 28|   3|    3900|\n",
+      "|2015-04-27 01:00:00|      VANDALISM|MALICIOUS MISCHIE...|   Monday| INGLESIDE|          NONE|1000 Block of POR...|  -122.457829853431|   37.740722334873|2015|    4| 27|   1|    1000|\n",
+      "|2015-04-19 20:00:00|   NON-CRIMINAL|      FOUND PROPERTY|   Sunday|   CENTRAL|          NONE|POWELL ST / NORTH...|-122.41214331058599|  37.8067579023106|2015|    4| 19|  20|       0|\n",
+      "|2015-04-19 17:49:00|STOLEN PROPERTY|STOLEN PROPERTY, ...|   Sunday|   TARAVAL|ARREST, BOOKED|300 Block of FAXO...|  -122.460152208945|37.720945420187896|2015|    4| 19|  17|     300|\n",
+      "|2015-04-19 17:00:00|  LARCENY/THEFT|GRAND THEFT FROM ...|   Sunday|   CENTRAL|          NONE|2500 Block of POW...|  -122.412360253337|  37.8081755740357|2015|    4| 19|  17|    2500|\n",
+      "|2015-04-19 16:28:00|       WARRANTS|      WARRANT ARREST|   Sunday|TENDERLOIN|ARREST, BOOKED|LEAVENWORTH ST / ...|  -122.414056291891|  37.7827931071006|2015|    4| 19|  16|       0|\n",
+      "|2015-04-19 16:25:00| OTHER OFFENSES|          CONSPIRACY|   Sunday| INGLESIDE|ARREST, BOOKED|700 Block of SAN ...|    -122.4232625139|  37.7427224817043|2015|    4| 19|  16|     700|\n",
+      "|2015-04-19 11:05:00|       BURGLARY|BURGLARY OF APART...|   Sunday|  NORTHERN|          NONE|800 Block of OFAR...|  -122.418729600557|   37.785007503993|2015|    4| 19|  11|     800|\n",
+      "+-------------------+---------------+--------------------+---------+----------+--------------+--------------------+-------------------+------------------+----+-----+---+----+--------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -609,6 +586,76 @@
     }
    ],
    "source": [
+    "#Street number extraction as integer value\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import IntegerType\n",
+    "\n",
+    "def street_no(address):\n",
+    "    try:\n",
+    "        return int(address.split(' ')[0])\n",
+    "    except:\n",
+    "        return 0\n",
+    "\n",
+    "street_no_udf = udf(street_no, IntegerType())\n",
+    "df = df.withColumn('StreetNo', street_no_udf(df['Address']))\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 26:===========================================>              (3 + 1) / 4]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+---------------+--------------------+---------+----------+--------------+--------------------+-------------------+------------------+----+-----+---+----+--------+-----+\n",
+      "|              Dates|       Category|            Descript|DayOfWeek|PdDistrict|    Resolution|             Address|                  X|                 Y|Year|Month|Day|Hour|StreetNo|Block|\n",
+      "+-------------------+---------------+--------------------+---------+----------+--------------+--------------------+-------------------+------------------+----+-----+---+----+--------+-----+\n",
+      "|2015-05-13 19:30:00|  LARCENY/THEFT|GRAND THEFT FROM ...|Wednesday|  SOUTHERN|          NONE|500 Block of BRAN...|  -122.397615567933|  37.7773918242817|2015|    5| 13|  19|     500|    1|\n",
+      "|2015-05-12 19:00:00|       BURGLARY|BURGLARY, HOT PRO...|  Tuesday|   TARAVAL|          NONE|2100 Block of 43R...|   -122.50180154774| 37.74655644758779|2015|    5| 12|  19|    2100|    1|\n",
+      "|2015-05-11 19:45:00|        ASSAULT|             BATTERY|   Monday|   MISSION|          NONE|4000 Block of 18T...|-122.43444692866699|  37.7608670671665|2015|    5| 11|  19|    4000|    1|\n",
+      "|2015-05-11 17:44:00|    WEAPON LAWS|CARRYING A CONCEA...|   Monday|   MISSION|ARREST, BOOKED| NATOMA ST / 15TH ST|  -122.405467934272|   37.781924110513|2015|    5| 11|  17|       0|    0|\n",
+      "|2015-05-11 15:50:00|   NON-CRIMINAL|     COURTESY REPORT|   Monday|  SOUTHERN|          NONE|800 Block of BRYA...|-122.40340479147899|   37.775420706711|2015|    5| 11|  15|     800|    1|\n",
+      "|2015-05-03 21:00:00|  LARCENY/THEFT|GRAND THEFT FROM ...|   Sunday|   TARAVAL|          NONE|800 Block of PACH...|  -122.469546792005|37.753565035114704|2015|    5|  3|  21|     800|    1|\n",
+      "|2015-05-02 16:05:00| OTHER OFFENSES|VIOLATION OF MUNI...| Saturday|  SOUTHERN|ARREST, BOOKED|2ND ST / TOWNSEND ST|  -122.390531404145|37.780607079847705|2015|    5|  2|  16|       0|    0|\n",
+      "|2015-05-02 11:40:00|  LARCENY/THEFT|ATTEMPTED THEFT F...| Saturday|  NORTHERN|          NONE|100 Block of CEDA...|  -122.420607225531|  37.7862064515088|2015|    5|  2|  11|     100|    1|\n",
+      "|2015-04-30 22:00:00|  VEHICLE THEFT|        STOLEN TRUCK| Thursday|   BAYVIEW|          NONE|1300 Block of UND...|-122.38723403675199|  37.7271017664689|2015|    4| 30|  22|    1300|    1|\n",
+      "|2015-04-29 17:00:00| MISSING PERSON|        FOUND PERSON|Wednesday| INGLESIDE|          NONE|0 Block of CUVIER ST|  -122.428718296467|  37.7340304069152|2015|    4| 29|  17|       0|    1|\n",
+      "|2015-04-29 11:06:00|        ASSAULT|             BATTERY|Wednesday|  SOUTHERN|          NONE|400 Block of NATO...|  -122.407039055082|37.780756518359105|2015|    4| 29|  11|     400|    1|\n",
+      "|2015-04-29 09:05:00| OTHER OFFENSES|DRIVERS LICENSE, ...|Wednesday|   TARAVAL| ARREST, CITED|OCEAN AV / SANLEA...|-122.47011059238001|  37.7303066365695|2015|    4| 29|   9|       0|    0|\n",
+      "|2015-04-28 03:57:00|  LARCENY/THEFT|PETTY THEFT SHOPL...|  Tuesday|   MISSION|ARREST, BOOKED|3900 Block of 18T...|  -122.431710082584| 37.76114188133271|2015|    4| 28|   3|    3900|    1|\n",
+      "|2015-04-27 01:00:00|      VANDALISM|MALICIOUS MISCHIE...|   Monday| INGLESIDE|          NONE|1000 Block of POR...|  -122.457829853431|   37.740722334873|2015|    4| 27|   1|    1000|    1|\n",
+      "|2015-04-19 20:00:00|   NON-CRIMINAL|      FOUND PROPERTY|   Sunday|   CENTRAL|          NONE|POWELL ST / NORTH...|-122.41214331058599|  37.8067579023106|2015|    4| 19|  20|       0|    0|\n",
+      "|2015-04-19 17:49:00|STOLEN PROPERTY|STOLEN PROPERTY, ...|   Sunday|   TARAVAL|ARREST, BOOKED|300 Block of FAXO...|  -122.460152208945|37.720945420187896|2015|    4| 19|  17|     300|    1|\n",
+      "|2015-04-19 17:00:00|  LARCENY/THEFT|GRAND THEFT FROM ...|   Sunday|   CENTRAL|          NONE|2500 Block of POW...|  -122.412360253337|  37.8081755740357|2015|    4| 19|  17|    2500|    1|\n",
+      "|2015-04-19 16:28:00|       WARRANTS|      WARRANT ARREST|   Sunday|TENDERLOIN|ARREST, BOOKED|LEAVENWORTH ST / ...|  -122.414056291891|  37.7827931071006|2015|    4| 19|  16|       0|    0|\n",
+      "|2015-04-19 16:25:00| OTHER OFFENSES|          CONSPIRACY|   Sunday| INGLESIDE|ARREST, BOOKED|700 Block of SAN ...|    -122.4232625139|  37.7427224817043|2015|    4| 19|  16|     700|    1|\n",
+      "|2015-04-19 11:05:00|       BURGLARY|BURGLARY OF APART...|   Sunday|  NORTHERN|          NONE|800 Block of OFAR...|  -122.418729600557|   37.785007503993|2015|    4| 19|  11|     800|    1|\n",
+      "+-------------------+---------------+--------------------+---------+----------+--------------+--------------------+-------------------+------------------+----+-----+---+----+--------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import when, lit\n",
+    "\n",
     "#Block feature extraction: 1 if block present, 0 otherwise\n",
     "df = df.withColumn('Block', when(df.Address.like(\"%Block%\") , lit(1)).otherwise(lit(0)))\n",
     "df.show()"
