--- a/sf-crime.ipynb
+++ b/sf-crime.ipynb
@@ -554,6 +554,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e33debfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function for weekly trend per category \n",
+    "\n",
+    "def weekly_trend(category):\n",
+    "    sfcrime_category = sfcrime_copy[sfcrime_copy['Category']==category]\n",
+    "    sfcrime_category.groupby(['DayOfWeek','Category'])\\\n",
+    "                .agg({'Resolution':'count'})\\\n",
+    "                .pivot_table(index='DayOfWeek',columns='Category')['Resolution']\\\n",
+    "                .reindex(['Monday','Tuesday','Wednesday','Thursday','Friday','Saturday','Sunday'])\\\n",
+    "                .plot(kind='line',figsize=(8,5))\n",
+    "    plt.title('Weekly trend of the category: ' + category)\n",
+    "    plt.xlabel('Day of the week')\n",
+    "    plt.ylabel('Count')\n",
+    "    plt.show()\n",
+    "\n",
+    "# Trend of the category 'DRUG/NARCOTIC' for each day of the week\n",
+    "weekly_trend('DRUG/NARCOTIC')\n",
+    "\n",
+    "# Trend of the category 'LARCENY/THEFT' for each day of the week\n",
+    "weekly_trend('LARCENY/THEFT')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
