--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -33,8 +33,8 @@
      "text": [
       "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.8/dist-packages (1.3.2)\n",
       "Requirement already satisfied: numpy<2.0,>=1.17.3 in /usr/local/lib/python3.8/dist-packages (from scikit-learn) (1.24.4)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in /usr/local/lib/python3.8/dist-packages (from scikit-learn) (1.10.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-learn) (3.2.0)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in /usr/local/lib/python3.8/dist-packages (from scikit-learn) (1.9.3)\n",
       "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.8/dist-packages (from scikit-learn) (1.3.2)\n"
      ]
     }
@@ -85,7 +85,7 @@
     "                    .option(\"sep\", \",\")\\\n",
     "                    .option(\"header\", \"True\")\\\n",
     "                    .option(\"inferSchema\", \"True\")\\\n",
-    "                    .option(\"path\",f\"bigdata/Project/dataset/{split}.csv\").load()\n",
+    "                    .option(\"path\",f\"bigdata/dataset/{split}.csv\").load()\n",
     "    return df"
    ]
   },
@@ -96,10 +96,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
+     "ename": "AnalysisException",
+     "evalue": "[PATH_NOT_FOUND] Path does not exist: file:/opt/spark/work-dir/bigdata/Project/dataset/train.csv.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb Cella 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sfcrime_train \u001b[39m=\u001b[39m load_data(\u001b[39m\"\u001b[39;49m\u001b[39mtrain\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m sfcrime_test \u001b[39m=\u001b[39m load_data(\u001b[39m\"\u001b[39m\u001b[39mtest\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#TODO scaricare anche test set e fare una funzione unica per preprocessing di entrambi i dataset \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# -> lo split che usiamo ora sul train può diventare train-val split\u001b[39;00m\n",
+      "\u001b[1;32m/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb Cella 8\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_data\u001b[39m(split):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     df \u001b[39m=\u001b[39m spark\u001b[39m.\u001b[39;49mread\u001b[39m.\u001b[39;49mformat(\u001b[39m\"\u001b[39;49m\u001b[39mcsv\u001b[39;49m\u001b[39m\"\u001b[39;49m)\\\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m                     \u001b[39m.\u001b[39;49moption(\u001b[39m\"\u001b[39;49m\u001b[39msep\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39m,\u001b[39;49m\u001b[39m\"\u001b[39;49m)\\\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m                     \u001b[39m.\u001b[39;49moption(\u001b[39m\"\u001b[39;49m\u001b[39mheader\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mTrue\u001b[39;49m\u001b[39m\"\u001b[39;49m)\\\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m                     \u001b[39m.\u001b[39;49moption(\u001b[39m\"\u001b[39;49m\u001b[39minferSchema\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mTrue\u001b[39;49m\u001b[39m\"\u001b[39;49m)\\\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m                     \u001b[39m.\u001b[39;49moption(\u001b[39m\"\u001b[39;49m\u001b[39mpath\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mbigdata/Project/dataset/\u001b[39;49m\u001b[39m{\u001b[39;49;00msplit\u001b[39m}\u001b[39;49;00m\u001b[39m.csv\u001b[39;49m\u001b[39m\"\u001b[39;49m)\u001b[39m.\u001b[39;49mload()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/liviadelgaudio/Desktop/BigData/BDA/sf-crime-12dic.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m df\n",
+      "File \u001b[0;32m/opt/spark/python/pyspark/sql/readwriter.py:314\u001b[0m, in \u001b[0;36mDataFrameReader.load\u001b[0;34m(self, path, format, schema, **options)\u001b[0m\n\u001b[1;32m    312\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_df(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_jreader\u001b[39m.\u001b[39mload(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_spark\u001b[39m.\u001b[39m_sc\u001b[39m.\u001b[39m_jvm\u001b[39m.\u001b[39mPythonUtils\u001b[39m.\u001b[39mtoSeq(path)))\n\u001b[1;32m    313\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 314\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_df(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_jreader\u001b[39m.\u001b[39;49mload())\n",
+      "File \u001b[0;32m/opt/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py:1322\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1316\u001b[0m command \u001b[39m=\u001b[39m proto\u001b[39m.\u001b[39mCALL_COMMAND_NAME \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_header \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[39m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1321\u001b[0m answer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgateway_client\u001b[39m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1322\u001b[0m return_value \u001b[39m=\u001b[39m get_return_value(\n\u001b[1;32m   1323\u001b[0m     answer, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgateway_client, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtarget_id, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mname)\n\u001b[1;32m   1325\u001b[0m \u001b[39mfor\u001b[39;00m temp_arg \u001b[39min\u001b[39;00m temp_args:\n\u001b[1;32m   1326\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(temp_arg, \u001b[39m\"\u001b[39m\u001b[39m_detach\u001b[39m\u001b[39m\"\u001b[39m):\n",
+      "File \u001b[0;32m/opt/spark/python/pyspark/errors/exceptions/captured.py:185\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    181\u001b[0m converted \u001b[39m=\u001b[39m convert_exception(e\u001b[39m.\u001b[39mjava_exception)\n\u001b[1;32m    182\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    183\u001b[0m     \u001b[39m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    184\u001b[0m     \u001b[39m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m     \u001b[39mraise\u001b[39;00m converted \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    187\u001b[0m     \u001b[39mraise\u001b[39;00m\n",
+      "\u001b[0;31mAnalysisException\u001b[0m: [PATH_NOT_FOUND] Path does not exist: file:/opt/spark/work-dir/bigdata/Project/dataset/train.csv."
      ]
     }
    ],
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "15fdb43a",
    "metadata": {},
    "outputs": [
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0009e521",
    "metadata": {},
    "outputs": [
@@ -190,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "19266446",
    "metadata": {},
    "outputs": [],
@@ -232,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4b2843d2",
    "metadata": {},
    "outputs": [
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "64910a2c",
    "metadata": {},
    "outputs": [
@@ -349,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d10d75ab",
    "metadata": {},
    "outputs": [
@@ -405,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "9562948c",
    "metadata": {},
    "outputs": [
@@ -418,7 +426,7 @@
     }
    ],
    "source": [
-    "plot = True\n",
+    "plot = False\n",
     "if plot:\n",
     "    sfcrime_train_pd = sfcrime_train.toPandas().copy()\n",
     "    \n",
@@ -438,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ffa9485e",
    "metadata": {},
    "outputs": [
@@ -480,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d19e0e22",
    "metadata": {},
    "outputs": [
@@ -540,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f8ac43d6",
    "metadata": {},
    "outputs": [
@@ -587,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "930870bd",
    "metadata": {},
    "outputs": [
@@ -630,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "afb4fe80",
    "metadata": {},
    "outputs": [
@@ -673,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "992839aa",
    "metadata": {},
    "outputs": [],
@@ -697,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f5896b81",
    "metadata": {},
    "outputs": [
@@ -718,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2818452d",
    "metadata": {},
    "outputs": [
@@ -739,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "20951475",
    "metadata": {},
    "outputs": [
@@ -760,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "51550f56",
    "metadata": {},
    "outputs": [
@@ -781,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "c26d5eb5",
    "metadata": {},
    "outputs": [
@@ -810,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "6c9e92c2",
    "metadata": {},
    "outputs": [
@@ -854,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "6a4e0480",
    "metadata": {},
    "outputs": [
@@ -901,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "a453da06",
    "metadata": {},
    "outputs": [],
@@ -968,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "19ad72dc",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "ea67f889",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "3b1359ae",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "9df6412f",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "3f23b7ee",
    "metadata": {},
    "outputs": [],
@@ -1169,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "a2040193",
    "metadata": {},
    "outputs": [
@@ -3057,6 +3065,35 @@
    "outputs": [],
    "source": [
     "#TODO: provare a ripetere classification con PCA nei modelli che non funzionano benissimo per vedere performances ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt_classifier_pca = DecisionTreeClassifier()\n",
+    "dt_Tr_pca = dt_classifier_pca.fit(sfcrime_pca)\n",
+    "dt_Tr_pca = dt_Tr_pca.setFeaturesCol(\"pca_features\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_dt_pca_test = dt_Tr_pca.transform(sfcrime_test, featuresCol=\"features\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_dt_pca_test.select('label','prediction').show()"
    ]
   }
  ],
