--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -247,7 +247,7 @@
     "# Nulls removal\n",
     "sfcrime.na.drop()\n",
     "\n",
-    "#plot_outliers(df) \n",
+    "#plot_outliers(sfcrime) \n",
     "\n",
     "# Outliers removal\n",
     "prev_count = sfcrime.count()\n",
