--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -1038,6 +1038,7 @@
     "\n",
     "PW:\n",
     "- logistic regression TF-IDF [CHIARA]\n",
+    "- logistic regression (one vs rest)\n",
     "- factorization machine (one vs rest) [GIORGIA]\n",
     "- multilayer perceptron (va un po' male, troppi dati) [LIVIA]\n",
     "\n",
