--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -1043,8 +1043,7 @@
     "- multilayer perceptron (va un po' male, troppi dati) [LIVIA]\n",
     "\n",
     "FIX:\n",
-    "- pca (?)\n",
-    "- split train-test"
+    "- pca (?)"
    ]
   },
   {
