--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -147,34 +147,7 @@
     }
    ],
    "source": [
-    "df_sfcrime = load_data(\"train\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "15fdb43a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- Dates: timestamp (nullable = true)\n",
-      " |-- Category: string (nullable = true)\n",
-      " |-- Descript: string (nullable = true)\n",
-      " |-- DayOfWeek: string (nullable = true)\n",
-      " |-- PdDistrict: string (nullable = true)\n",
-      " |-- Resolution: string (nullable = true)\n",
-      " |-- Address: string (nullable = true)\n",
-      " |-- X: double (nullable = true)\n",
-      " |-- Y: double (nullable = true)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
+    "df_sfcrime = load_data(\"train\")\n",
     "df_sfcrime.printSchema()"
    ]
   },
@@ -225,6 +198,24 @@
     "- drop duplicate rows\n",
     "- null removal\n",
     "- outliers removal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "012b2eb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_outliers(df):\n",
+    "    sfcrime_pd = df.toPandas()\n",
+    "\n",
+    "    geometry = [Point(xy) for xy in zip(sfcrime_pd['X'], sfcrime_pd['Y'])]\n",
+    "    gdf = GeoDataFrame(sfcrime_pd, geometry=geometry)\n",
+    "\n",
+    "    world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
+    "    gdf.plot(ax=world.plot(), marker='o', color='red')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -283,9 +274,8 @@
     "# Nulls removal\n",
     "df_sfcrime.na.drop()\n",
     "\n",
-    "#plot_outliers(sfcrime) \n",
-    "\n",
     "# Outliers removal\n",
+    "plot_outliers(df_sfcrime) \n",
     "prev_count = df_sfcrime.count()\n",
     "sfcrime = df_sfcrime.where((df_sfcrime.X < -122) & (df_sfcrime.X > -123) & (df_sfcrime.Y < 38) & (df_sfcrime.Y > 37))\n",
     "print(f\"Number of outliers: \", prev_count - sfcrime.count())\n",
@@ -299,104 +289,10 @@
     "\n",
     "# Drop unused columns\n",
     "df_sfcrime = df_sfcrime.drop(\"Dates\")\n",
-    "df_sfcrime = df_sfcrime.drop(\"X_Vect\",\"Y_Vect\", \"X\", \"Y\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "25cc9d70",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 132:===================================>                     (5 + 3) / 8]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------+--------------------+---------+----------+--------------+--------------------+----+-----+----+--------------------+--------------------+\n",
-      "|      Category|            Descript|DayOfWeek|PdDistrict|    Resolution|             Address|Hour|Month|Year|            X_Scaled|            Y_Scaled|\n",
-      "+--------------+--------------------+---------+----------+--------------+--------------------+----+-----+----+--------------------+--------------------+\n",
-      "|      BURGLARY|BURGLARY, UNLAWFU...|Wednesday|  NORTHERN|          NONE|2300 Block of FIL...|  13|    5|2015|[0.03937154402162...|[0.00159244193377...|\n",
-      "| VEHICLE THEFT|   STOLEN AUTOMOBILE|  Tuesday| INGLESIDE|          NONE|ALEMANY BL / ONON...|  21|    5|2015|[0.03724577693029...|[2.62895181373300...|\n",
-      "| LARCENY/THEFT|GRAND THEFT FROM ...|   Monday|  NORTHERN|          NONE|   BUSH ST / POLK ST|  21|    5|2015|[0.04635119131855...|[0.00154554696272...|\n",
-      "| LARCENY/THEFT|GRAND THEFT SHOPL...|   Monday|  SOUTHERN|          NONE|700 Block of MARK...|  19|    5|2015|[0.05448978141589...|[0.00151527753268...|\n",
-      "|OTHER OFFENSES|VIOLATION OF MUNI...|   Sunday|TENDERLOIN|ARREST, BOOKED|200 Block of POWE...|   8|    5|2015|[0.05236303358271...|[0.00151085646212...|\n",
-      "| LARCENY/THEFT|PETTY THEFT OF PR...|   Friday|  NORTHERN|          NONE|2600 Block of LOM...|  23|    5|2015|[0.03389620360710...|[0.00173576214171...|\n",
-      "| LARCENY/THEFT|PETTY THEFT OF PR...|   Friday|   TARAVAL|          NONE|TARAVAL ST / 41ST AV|  20|    5|2015|[0.00714226677522...|[6.52635024615458...|\n",
-      "|MISSING PERSON|       MISSING ADULT|   Friday|   MISSION|          NONE|2800 Block of 25T...|  13|    5|2015|[0.05312468862717...|[8.32139120716913...|\n",
-      "|MISSING PERSON|       MISSING ADULT|   Friday|   MISSION|          NONE|800 Block of CAPP ST|  11|    5|2015|[0.04774564259656...|[8.64482988075287...|\n",
-      "| DRUG/NARCOTIC|POSSESSION OF BAS...| Thursday|  NORTHERN|ARREST, BOOKED|700 Block of LARK...|  21|    4|2015|[0.04753584314734...|[0.00147346287352...|\n",
-      "|  PROSTITUTION|SOLICITS FOR ACT ...| Thursday|  NORTHERN|ARREST, BOOKED|1500 Block of VAN...|  15|    4|2015|[0.04547945022110...|[0.00156889752293...|\n",
-      "| VEHICLE THEFT|   STOLEN AUTOMOBILE|Wednesday|   MISSION|          NONE|2500 Block of BRY...|  23|    4|2015|[0.05183044061795...|[8.73960326954232...|\n",
-      "|      WARRANTS|      WARRANT ARREST|  Tuesday|   CENTRAL|ARREST, BOOKED|400 Block of PACI...|  10|    4|2015|[0.05519848767868...|[0.00171390442523...|\n",
-      "|     VANDALISM|MALICIOUS MISCHIE...|   Monday|   CENTRAL|          NONE|500 Block of PACI...|  15|    4|2015|[0.05409284881541...|[0.00170853285568...|\n",
-      "| LARCENY/THEFT|GRAND THEFT FROM ...|   Sunday|  NORTHERN|          NONE|FRANKLIN ST / TUR...|  22|    4|2015|[0.04537302744627...|[0.00141271482191...|\n",
-      "|  NON-CRIMINAL|CIVIL SIDEWALKS, ...|   Sunday|   MISSION|          NONE|2900 Block of 16T...|  20|    4|2015|[0.04714937621273...|[0.00109549808805...|\n",
-      "| LARCENY/THEFT|GRAND THEFT FROM ...|   Sunday|  SOUTHERN|          NONE|GOLDEN GATE AV / ...|  19|    4|2015|[0.05132418836136...|[0.00142185023671...|\n",
-      "| LARCENY/THEFT|PETTY THEFT OF PR...| Saturday|  SOUTHERN|          NONE|  0 Block of 12TH ST|  23|    4|2015|[0.04650311442466...|[0.00126626790110...|\n",
-      "| LARCENY/THEFT|GRAND THEFT FROM ...| Saturday|   CENTRAL|          NONE|THE EMBARCADERONO...|  17|    4|2015|[0.05367239461105...|[0.00188820282745...|\n",
-      "|OTHER OFFENSES|DRIVERS LICENSE, ...| Saturday|  SOUTHERN| ARREST, CITED|300 Block of TOWN...|  16|    4|2015|[0.05834105665616...|[0.00130715395815...|\n",
-      "+--------------+--------------------+---------+----------+--------------+--------------------+----+-----+----+--------------------+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
-   "source": [
+    "df_sfcrime = df_sfcrime.drop(\"X_Vect\",\"Y_Vect\", \"X\", \"Y\")\n",
+    "\n",
+    "# Visualize the data\n",
     "df_sfcrime.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "d10d75ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nsfcrime_pd = sfcrime.toPandas()\\n\\ngeometry = [Point(xy) for xy in zip(sfcrime_pd['X'], sfcrime_pd['Y'])]\\ngdf = GeoDataFrame(sfcrime_pd, geometry=geometry)\\n\\nworld = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\\ngdf.plot(ax=world.plot(), marker='o', color='red')\\nplt.show()\\n\""
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "!pip3 install geopandas\n",
-    "import geopandas as gpd\n",
-    "from shapely.geometry import Point\n",
-    "from geopandas import GeoDataFrame\n",
-    "import matplotlib.pyplot as plt\n",
-    "'''\n",
-    "\n",
-    "# Outliers : https://www.kaggle.com/code/bananawolf/random-forest-knn-logistic-regression\n",
-    "\n",
-    "'''\n",
-    "sfcrime_pd = sfcrime.toPandas()\n",
-    "\n",
-    "geometry = [Point(xy) for xy in zip(sfcrime_pd['X'], sfcrime_pd['Y'])]\n",
-    "gdf = GeoDataFrame(sfcrime_pd, geometry=geometry)\n",
-    "\n",
-    "world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
-    "gdf.plot(ax=world.plot(), marker='o', color='red')\n",
-    "plt.show()\n",
-    "'''"
    ]
   },
   {
@@ -433,7 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot = False\n",
+    "plot = True\n",
     "if plot:\n",
     "    sfcrime_train_pd = sfcrime_train.toPandas().copy()\n",
     "    \n",
@@ -874,6 +770,7 @@
    "metadata": {},
    "source": [
     "## Re-process the dataset after having inspected it: \n",
+    "Pipeline:\n",
     "- transform to categorical le colonne.......\n",
     "- extract blocl feature ...\n",
     "- tokenize descript...\n",
@@ -897,13 +794,12 @@
    "source": [
     "# Transform columns to categorical\n",
     "district_indexer = StringIndexer(inputCol=\"PdDistrict\", outputCol=\"PdDistrict_cat\")\n",
-    "#sfcrime = indexer.fit(sfcrime).transform(sfcrime)\n",
     "\n",
     "category_indexer = StringIndexer(inputCol=\"Category\", outputCol=\"Category_cat\")\n",
-    "#sfcrime = indexer.fit(sfcrime).transform(sfcrime)\n",
+    "\n",
     "\n",
     "resolution_indexer = StringIndexer(inputCol=\"Resolution\", outputCol=\"Resolution_cat\")\n",
-    "#sfcrime = indexer.fit(sfcrime).transform(sfcrime)\n",
+    "\n",
     "\n",
     "day_indexer = StringIndexer(inputCol=\"DayOfWeek\", outputCol=\"DayOfWeek_cat\")\n",
     "#sfcrime = indexer.fit(sfcrime).transform(sfcrime)\n",
@@ -1017,21 +913,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0749bb6e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/12/30 08:31:25 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
-      "23/12/30 08:31:25 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
-      "23/12/30 08:31:28 WARN ObjectStore: Version information not found in metastore. hive.metastore.schema.verification is not enabled so recording the schema version 2.3.0\n",
-      "23/12/30 08:31:28 WARN ObjectStore: setMetaStoreSchemaVersion called but recording version is disabled: version = 2.3.0, comment = Set by MetaStore UNKNOWN@172.17.0.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load sfcrime_train and sfcrime_test\n",
     "sfcrime = spark.table(\"sfcrime_processed\")"
@@ -1193,6 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "c2cc70d8",
    "metadata": {},
    "outputs": [
     {
@@ -2921,6 +2807,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b924f7fd",
    "metadata": {},
    "source": [
     "## Prova MultiLayerPerceptron"
@@ -2929,6 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "dedece0c",
    "metadata": {},
    "outputs": [
     {
@@ -2947,6 +2835,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "0b734b60",
    "metadata": {},
    "outputs": [
     {
@@ -2979,6 +2868,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "3565179d",
    "metadata": {},
    "outputs": [
     {
@@ -2997,6 +2887,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "d218eb6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3007,6 +2898,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "db180e88",
    "metadata": {},
    "outputs": [
     {
@@ -3063,6 +2955,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "37543bed",
    "metadata": {},
    "outputs": [
     {
@@ -3528,6 +3421,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "448a94d2",
    "metadata": {},
    "outputs": [
     {
@@ -3585,6 +3479,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "e9f39a53",
    "metadata": {},
    "outputs": [
     {
@@ -3644,6 +3539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e7d4a7e0",
    "metadata": {},
    "outputs": [
     {
@@ -4504,6 +4400,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2bebf68f",
    "metadata": {},
    "source": [
     "## Prova KNN"
@@ -4512,6 +4409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d9f30a0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4522,6 +4420,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "87a3daef",
    "metadata": {},
    "outputs": [
     {
@@ -4975,6 +4874,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ebe2c613",
    "metadata": {},
    "source": [
     "## Prova Factorization Machines"
@@ -4983,6 +4883,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "d06c5b3b",
    "metadata": {},
    "outputs": [
     {
@@ -27764,7 +27665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
