--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -40,7 +40,9 @@
     }
    ],
    "source": [
-    "!pip install scikit-learn"
+    "%%capture\n",
+    "!pip install scikit-learn\n",
+    "!pip install geopandas"
    ]
   },
   {
@@ -104,7 +106,6 @@
    ],
    "source": [
     "#Geopandas\n",
-    "!pip3 install geopandas\n",
     "import geopandas as gpd\n",
     "from shapely.geometry import Point\n",
     "from geopandas import GeoDataFrame"
@@ -13637,6 +13638,14 @@
    "metadata": {},
    "source": [
     "# Error analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aecca95f",
+   "metadata": {},
+   "source": [
+    "fare dataframe con tutti i risultati dei modelli"
    ]
   },
   {
