--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c204a332",
    "metadata": {},
    "outputs": [],
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0749bb6e",
    "metadata": {},
    "outputs": [
@@ -1057,10 +1057,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/12/31 15:06:28 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
-      "23/12/31 15:06:28 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
-      "23/12/31 15:06:29 WARN ObjectStore: Version information not found in metastore. hive.metastore.schema.verification is not enabled so recording the schema version 2.3.0\n",
-      "23/12/31 15:06:29 WARN ObjectStore: setMetaStoreSchemaVersion called but recording version is disabled: version = 2.3.0, comment = Set by MetaStore UNKNOWN@172.17.0.2\n"
+      "24/01/03 15:17:48 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "24/01/03 15:17:48 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "24/01/03 15:17:49 WARN ObjectStore: Version information not found in metastore. hive.metastore.schema.verification is not enabled so recording the schema version 2.3.0\n",
+      "24/01/03 15:17:49 WARN ObjectStore: setMetaStoreSchemaVersion called but recording version is disabled: version = 2.3.0, comment = Set by MetaStore UNKNOWN@172.17.0.2\n"
      ]
     }
    ],
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3b1359ae",
    "metadata": {},
    "outputs": [
@@ -13391,7 +13391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3215c226",
    "metadata": {},
    "outputs": [
@@ -13399,7 +13399,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/12/31 15:26:22 WARN BlockManager: Asked to remove block broadcast_10743, which does not exist\n",
       "                                                                                \r"
      ]
     }
@@ -13424,7 +13423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "db58ef8a",
    "metadata": {},
    "outputs": [
@@ -13432,7 +13431,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/12/31 15:07:53 WARN DAGScheduler: Broadcasting large task binary with size 3.2 MiB\n",
+      "24/01/03 16:10:30 WARN DAGScheduler: Broadcasting large task binary with size 3.6 MiB\n",
       "                                                                                \r"
      ]
     },
@@ -13440,24 +13439,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of model Factorization Machines = 0.755494\n"
+      "Accuracy of model Factorization Machines with One vs Rest = 0.996938\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/12/31 15:08:48 WARN DAGScheduler: Broadcasting large task binary with size 3.2 MiB\n",
-      "23/12/31 15:09:05 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 15:09:05 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "[Stage 10419:=============>                                         (1 + 3) / 4]\r"
+      "24/01/03 16:11:30 WARN DAGScheduler: Broadcasting large task binary with size 3.6 MiB\n",
+      "[Stage 11909:>                                                      (0 + 4) / 4]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score of model Factorization Machines = 0.732009\n"
+      "[3258.799s][warning][gc,alloc] stdout writer for python3: Retried waiting for GCLocker too often allocating 15434 words\n",
+      "[3258.799s][warning][gc,alloc] stdout writer for python3: Retried waiting for GCLocker too often allocating 256 words\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/01/03 16:11:47 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:47 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:47 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:47 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:48 WARN TaskMemoryManager: Failed to allocate a page (2917257 bytes), try again.\n",
+      "24/01/03 16:11:48 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:48 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:50 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:51 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:51 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:51 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:51 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:52 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:11:52 WARN TaskMemoryManager: Failed to allocate a page (2917257 bytes), try again.\n",
+      "24/01/03 16:11:52 WARN TaskMemoryManager: Failed to allocate a page (2917257 bytes), try again.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3269.829s][warning][gc,alloc] stdout writer for python3: Retried waiting for GCLocker too often allocating 21414 words\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/01/03 16:11:55 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "24/01/03 16:12:03 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
+      "[Stage 11909:=============>                                         (1 + 3) / 4]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score of model Factorization Machines with One vs Rest = 0.997071\n"
      ]
     },
     {
@@ -14958,7 +15000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
