--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -1024,23 +1024,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ea742e18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/12/31 12:20:03 WARN ObjectStore: Failed to get database global_temp, returning NoSuchObjectException\n",
-      "23/12/31 12:20:08 WARN SessionState: METASTORE_FILTER_HOOK will be ignored, since hive.security.authorization.manager is set to instance of HiveAuthorizerFactory.\n",
-      "23/12/31 12:20:08 WARN HiveConf: HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
-      "23/12/31 12:20:08 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
-      "23/12/31 12:20:08 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save sfcrime and sfcrime_tfidf\n",
     "sfcrime.write.mode(\"overwrite\").option(\"path\", \"bigdata/Project/dataset/sfcrime_processed\").saveAsTable(\"sfcrime_processed\")\n",
@@ -1057,10 +1044,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/01/03 17:23:48 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
-      "24/01/03 17:23:48 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
-      "24/01/03 17:23:50 WARN ObjectStore: Version information not found in metastore. hive.metastore.schema.verification is not enabled so recording the schema version 2.3.0\n",
-      "24/01/03 17:23:50 WARN ObjectStore: setMetaStoreSchemaVersion called but recording version is disabled: version = 2.3.0, comment = Set by MetaStore UNKNOWN@172.17.0.2\n"
+      "24/01/03 19:25:44 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "24/01/03 19:25:44 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "24/01/03 19:25:45 WARN ObjectStore: Version information not found in metastore. hive.metastore.schema.verification is not enabled so recording the schema version 2.3.0\n",
+      "24/01/03 19:25:45 WARN ObjectStore: setMetaStoreSchemaVersion called but recording version is disabled: version = 2.3.0, comment = Set by MetaStore UNKNOWN@172.17.0.2\n"
      ]
     }
    ],
@@ -1338,15 +1325,6 @@
     "dt_classifier = DecisionTreeClassifier(maxDepth=best_maxdepth_param, maxBins = best_maxbins_param, labelCol=\"label\", featuresCol=\"features\", seed=seed)\n",
     "dt_Tr = dt_classifier.fit(rf_sfcrime_train)\n",
     "\n",
-    "results_dt_train = dt_Tr.transform(rf_sfcrime_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "results_dt_train = dt_Tr.transform(rf_sfcrime_test)"
    ]
   },
@@ -2577,10 +2555,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "997a9730",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of model Gradient-Boosted tree classififer with One vs Rest = 0.995872\n",
+      "F1 score of model Gradient-Boosted tree classififer with One vs Rest = 0.995883\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model\n",
     "acc_gbtovr, f1_gbtovr = evaluation(results_gbtovr, 'Gradient-Boosted tree classififer with One vs Rest', oneVsRest = True)"
@@ -2599,19 +2586,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d900961c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+----------+--------------------+\n",
+      "|            features|label|prediction|       rawPrediction|\n",
+      "+--------------------+-----+----------+--------------------+\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  5.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "|{[0, 1, 2, 3, 4, ...|  0.0|       0.0|{1, [1.3164374241...|\n",
+      "+--------------------+-----+----------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the results from json file\n",
-    "results_lrovr = spark.read.format(\"json\")\\\n",
+    "results_gbtovr = spark.read.format(\"json\")\\\n",
     "                    .option(\"header\", \"True\")\\\n",
     "                    .option(\"inferSchema\", \"True\")\\\n",
     "                    .option(\"path\",f\"bigdata/BDA/results_gbtovr.json/\").load()\n",
     "\n",
     "# Check that the results are loaded correctly\n",
-    "results_lrovr.show()"
+    "results_gbtovr.show()"
    ]
   },
   {
