--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -12736,22 +12736,9 @@
     "\n",
     "Factorization Machines are a type of machine learning model that can be used to model the interactions between features. They are based on the assumption that the value of a label is determined not only by the individual features, but also by the interactions between those features.\n",
     "\n",
-    "Combining Factorization Machines with the One-vs-Rest strategy enables the model to predict the presence or absence of multiple labels for a given instance efficiently, in this way an FM model is used to learn the feature interactions and an OVR classifier is used to combine the predictions for each label."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24adaa02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#keep only 100 records\n",
-    "#df_assembled = rf_sfcrime_scaled_train.limit(100)\n",
+    "Combining Factorization Machines with the One-vs-Rest strategy enables the model to predict the presence or absence of multiple labels for a given instance efficiently, in this way an FM model is used to learn the feature interactions and an OVR classifier is used to combine the predictions for each label.\n",
     "\n",
-    "# TODO: fare con tutto il dataset\n",
-    "\n",
-    "df_assembled = rf_sfcrime_train.limit(100)"
+    "Here, we train the model on scaled data since it performs gradient-based optimization."
    ]
   },
   {
@@ -12769,19 +12756,12 @@
     }
    ],
    "source": [
-    "fm = FMClassifier(labelCol=\"label\", featuresCol=\"scaledFeatures\", maxIter=100, stepSize=1, seed=seed) # oppure step size= 0.001 \n",
+    "fm = FMClassifier(labelCol=\"label\", featuresCol=\"scaledFeatures\", maxIter=100, stepSize=1, seed=seed)\n",
     "\n",
     "# Instantiate the One Vs Rest Classifier\n",
     "ovr_fm = OneVsRest(classifier=fm)\n",
     "\n",
-    "\n",
-    "# Create a Pipeline.\n",
-    "#pipeline = Pipeline(stages=[labelIndexer, featureScaler, fm])\n",
-    " \n",
-    "# Train model. --> 16 minutes GIO\n",
-    "#model_fm = ovr_fm.fit(rf_sfcrime_scaled_train)\n",
-    "\n",
-    "\n",
+    "# Train the model and transform the test set\n",
     "model_fm = ovr_fm.fit(rf_sfcrime_train)\n",
     "results_fm = model_fm.transform(rf_sfcrime_test)"
    ]
@@ -12885,48 +12865,7 @@
    "execution_count": null,
    "id": "d3206467",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/12/31 16:02:55 WARN DAGScheduler: Broadcasting large task binary with size 3.9 MiB\n",
-      "23/12/31 16:03:03 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:03 WARN TaskMemoryManager: Failed to allocate a page (2740698 bytes), try again.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3404.729s][warning][gc,alloc] stdout writer for python3: Retried waiting for GCLocker too often allocating 342590 words\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/12/31 16:03:04 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:04 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:04 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:04 WARN TaskMemoryManager: Failed to allocate a page (2740698 bytes), try again.\n",
-      "23/12/31 16:03:05 ERROR Utils: Uncaught exception in thread stdout writer for python3\n",
-      "java.lang.OutOfMemoryError: Java heap space\n",
-      "Exception in thread \"stdout writer for python3\" java.lang.OutOfMemoryError: Java heap space\n",
-      "23/12/31 16:03:05 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:05 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:05 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:06 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:06 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:06 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:06 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:06 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:16 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "23/12/31 16:03:29 WARN TaskMemoryManager: Failed to allocate a page (4194288 bytes), try again.\n",
-      "[Stage 22325:>                                                      (0 + 4) / 4]\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save results\n",
     "results_fm.write.json(\"bigdata/results_fm.json\")"
