results LR-TFIDF

--- a/sf-crime-12dic.ipynb
+++ b/sf-crime-12dic.ipynb
@@ -23,22 +23,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "00f4d0d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.8/dist-packages (1.3.2)\n",
-      "Requirement already satisfied: numpy<2.0,>=1.17.3 in /usr/local/lib/python3.8/dist-packages (from scikit-learn) (1.24.4)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in /usr/local/lib/python3.8/dist-packages (from scikit-learn) (1.10.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-learn) (3.2.0)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.8/dist-packages (from scikit-learn) (1.3.2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%capture\n",
     "!pip install scikit-learn\n",
@@ -47,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c204a332",
    "metadata": {},
    "outputs": [],
@@ -121,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "4c33b16a",
    "metadata": {},
    "outputs": [],
@@ -131,13 +119,13 @@
     "                    .option(\"sep\", \",\")\\\n",
     "                    .option(\"header\", \"True\")\\\n",
     "                    .option(\"inferSchema\", \"True\")\\\n",
-    "                    .option(\"path\",f\"bigdata/dataset/{split}.csv\").load()\n",
+    "                    .option(\"path\",f\"bigdata/Project/dataset/{split}.csv\").load()\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "aed0c5c9",
    "metadata": {},
    "outputs": [
@@ -145,7 +133,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 1:>                                                          (0 + 4) / 4]\r"
+      "[Stage 1:============================================>              (6 + 2) / 8]\r"
      ]
     },
     {
@@ -266,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "19266446",
    "metadata": {},
    "outputs": [
@@ -281,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of duplicated rows:  2323\n"
+      "Number of duplicated rows:  0\n"
      ]
     },
     {
@@ -302,7 +290,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 35:==============>                                           (1 + 3) / 4]\r"
+      "[Stage 47:=======>                                                  (1 + 7) / 8]\r"
      ]
     },
     {
@@ -360,7 +348,7 @@
     "df_sfcrime.na.drop()\n",
     "\n",
     "# Outliers removal\n",
-    "plot_outliers(df_sfcrime) \n",
+    "#plot_outliers(df_sfcrime) \n",
     "prev_count = df_sfcrime.count()\n",
     "df_sfcrime = df_sfcrime.where((df_sfcrime.X < -122) & (df_sfcrime.X > -123) & (df_sfcrime.Y < 38) & (df_sfcrime.Y > 37))\n",
     "print(f\"Number of outliers: \", prev_count - df_sfcrime.count())\n",
@@ -964,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a453da06",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "3b1359ae",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "a2040193",
    "metadata": {},
    "outputs": [],
@@ -15636,12 +15624,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6965c3cc",
+   "execution_count": 15,
+   "id": "38136104",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lr already defined with the best hyperparameters\n",
+    "#TODO: si potranno togliere\n",
+    "best_maxiter_param = 10\n",
+    "best_regparam_param = 0.1\n",
+    "best_elasticnetparam_param = 0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6965c3cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/01/03 21:47:01 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n",
+      "[Stage 171:==================================================>      (8 + 1) / 9]\r"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression(featuresCol=\"features\", labelCol=\"label\", maxIter=best_maxiter_param, regParam=best_regparam_param, elasticNetParam=best_elasticnetparam_param) \n",
+    "\n",
     "lr_tfidf_Tr = lr.fit(rf_sfcrime_tfidf_train)\n",
     "\n",
     "results_lr_tfidf = lr_tfidf_Tr.transform(rf_sfcrime_tfidf_test)"
@@ -15649,10 +15660,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a9c5f315",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of model Logistic Regression with TF-IDF = 0.990074\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score of model Logistic Regression with TF-IDF = 0.989141\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 182:==================================================>      (8 + 1) / 9]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log Loss of model Logistic Regression with TF-IDF = 0.258214\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model\n",
     "acc_lrtfidf, log_lrtfidf, f1_lrtfidf = evaluation(results_lr_tfidf, 'Logistic Regression with TF-IDF')"
