--- a/sf-crime 1.ipynb
+++ b/sf-crime 1.ipynb
@@ -1606,7 +1606,7 @@
     }
    ],
    "source": [
-    "nb = NaiveBayes(modelType=\"multinomial\", featuresCol=\"features\", smoothing=0.0)\n",
+    "nb = NaiveBayes(modelType=\"multinomial\", featuresCol=\"features\", smoothing=best_smoothing_param)\n",
     "nb_Tr = nb.fit(rf_sfcrime_train)\n",
     "\n",
     "results_nb = nb_Tr.transform(rf_sfcrime_test)"
