--- a/sf-crime_FINAL.ipynb
+++ b/sf-crime_FINAL.ipynb
@@ -332,7 +332,7 @@
    "id": "a2600010",
    "metadata": {},
    "source": [
-    "From the previous image, we can observe that there are some erroneus coordinates that do not refer to San Francisco geographic coordinates. They may be due to mislabelling errors, and we consider them as outliers, therefore we remove them from the dataset. "
+    "From the previous image, we can observe that there are some erroneous coordinates that do not refer to San Francisco geographic coordinates. They may be due to mislabelling errors, and we consider them as outliers, therefore we remove them from the dataset. "
    ]
   },
   {
